# FortranProject

./: .gitignore  README.md  challenges.md  cpp_solution.md  roadmap.md
Code_Fortran90/: Grad.f90  Grad_para.f90  Makefile  Matrice_Quadri  VecteurF  VecteurM  VecteurU  VecteurU_b  a.out  cg_solver_parallel.f90  cg_solver_sequential.f90  data  grad.mod  mod_fonctions_instationnaire.f90  mod_fonctions_instationnaire.mod  mod_remplissage.f90  mod_remplissage_instationnaire.f90  remplissage_V.f90  remplissage_V_para_instationnaire.f90  remplissage_V_para_stationnaire.f90
Code_Fortran90/cpp_version/: Matrice_Quadri  VecteurF  VecteurM  VecteurU_b  a.out  mod_fonctions_instationnaire.cpp  remplissage.cpp  solver.hpp
Code_Fortran90/cpp_version/backup/: Grad_v1.cpp
HES_cpp_version2/: Makefile  data  main.cpp
HES_cpp_version2/include/: GridParameters.hpp  Vectors.hpp  settings.hpp
HES_cpp_version2/src/: GridParameters.cpp  Vectors.cpp
HES_python_version/: assembly.py  config.py  data.json  grid.py  imports.py  main.py  matrices.py  problem_definition.py  pyproject.toml  requirements.txt  solvers.py  vectors.py
HES_python_version/src/: assembly.py  config.py  grid.py  imports.py  matrices.py  problem_definition.py  solvers.py  vectors.py
HES_python_version/tests/: test_config.py  test_grid.py  test_matrices.py  test_sequential_vectors.py
cpp_version/: Grad.cpp  Makefile  VecteurU  VecteurU_b  data  mod_fonctions_instationnaire.cpp  plot_result.py  remplissage.cpp
